--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "simple-crypto-js": "^3.0.1",
     "use-reducer-logger": "^1.0.2",
     "web-vitals": "^2.1.4"
   },
